<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.demo.ingredisearch.features.main.MainFragment"
        android:label="@string/main_title"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_mainFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.demo.ingredisearch.features.search.SearchFragment"
        android:label="@string/search_title"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_searchResultsFragment"
            app:destination="@id/searchResultsFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.demo.ingredisearch.features.favorites.FavoritesFragment"
        android:label="@string/favorites_title" >
        <action
            android:id="@+id/action_favoritesFragment_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchResultsFragment"
        android:name="com.demo.ingredisearch.features.searchresults.SearchResultsFragment"
        android:label="@string/results_title" >
        <argument
            android:name="query"
            app:argType="string"
            app:nullable="true"
            />
        <action
            android:id="@+id/action_searchResultsFragment_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment" />
        <action
            android:id="@+id/action_searchResultsFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeDetailsFragment"
        android:name="com.demo.ingredisearch.features.details.RecipeDetailsFragment"
        android:label="@string/recipe_title" >
        <argument
            android:name="recipeId"
            app:argType="string" />
    </fragment>
</navigation>