<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/mainFragment"
        android:icon="@drawable/ic_list"
        android:title="@string/home" />
    <item
        android:id="@id/searchFragment"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search" />
    <item
        android:id="@id/favoritesFragment"
        android:icon="@drawable/ic_favorite_24dp"
        android:title="@string/favorites_title" />
</menu>