...
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".features.main.MainFragment"
    >

    <LinearLayout
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_button"
        android:gravity="center"
...
            app:srcCompat="@drawable/ic_search_24dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/favButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_button"
        android:gravity="center"
...
